# testmind

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/testmind/analysis/: flaky.py  models.py  predictor.py  regression.py  stability.py
src/testmind/cli/: app.py
src/testmind/domain/: models.py
src/testmind/parsers/: base.py  html_parser.py  junit_parser.py
src/testmind/reports/: dashboard.py  formatters.py  summary.py
src/testmind/storage/: base.py  factory.py  postgres_store.py  sqlite_store.py
src/testmind/utils/: tools.py
tests/analysis/: test_flaky.py  test_predictor.py  test_regression.py  test_stability.py
tests/cli/: test_cli.py
tests/parsers/: test_html_parser.py  test_junit_parser.py
tests/reports/: test_formatters.py  test_summary.py
tests/storage/: test_sqlite_store.py
